--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
 # tasks file for ansible-role-installrudder
+
+- include_tasks: sles.yml
+  when: ansible_os_family == "Suse"
+
+- include_tasks: debian.yml
+  when: ansible_os_family == "Debian"
+
+- include_tasks: redhat.yml
+  when: ansible_os_family == "RedHat"
