--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   author: Rudder
   description: Ansible role to install Rudder Server
   company: Rudder
-  license: GPLv3
+  license: MIT
   min_ansible_version: 2.9
   galaxy_tags: []
 
