--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for ansible-role-installrudder
+
+- name: restart_jetty_service
+  service:
+    name: rudder-jetty
+    state: restarted
+
