--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,8 +5,12 @@ galaxy_info:
   company: Rudder
   license: MIT
   min_ansible_version: 2.9
-  galaxy_tags: []
+  
+  galaxy_tags: 
+  - rudder
+  - automation
+  - compliance
+  - audit 
 
 dependencies: []
-
 
