--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,6 @@ galaxy_info:
   license: MIT
   min_ansible_version: 2.9
   
-   galaxy_tags:
-     - rudder
-     - automation
-     - compliance
-     - audit
+  galaxy_tags: []
 
 dependencies: []
