--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,9 +24,9 @@ galaxy_info:
         - stretch 
         - buster
 
-    - name: RedHat
+    - name: SLES
       versions:
-         - 7
-         - 8
+         - 12
+         - 15
 
 dependencies: []
