--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,49 +2,49 @@
 # tasks for configuring Rudder
 
    - name: Configure Rudder Settings for modified_file_ttl
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "modified_file_ttl"
        value: "22"
        validate_certs: False
 
    - name: Configure Rudder Settings for global_policy_mode
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "global_policy_mode"
        value: "audit"
        validate_certs: False
 
    - name: Configure Rudder Settings for rsyslog_reporting_protocol
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "rsyslog_reporting_protocol"
        value: "UDP"
        validate_certs: False
 
    - name: Configure Rudder Settings for rsyslog_reporting_protocol
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "rsyslog_reporting_protocol"
        value: "UDP"
        validate_certs: False
 
    - name: Configure Rudder Settings for display_recent_changes_graphs
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "display_recent_changes_graphs"
        value: "true"
        validate_certs: False
 
    - name: Configure Rudder Settings for log_all_reports
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "log_all_reports"
        value: "false"
        validate_certs: False
 
    - name: Configure Rudder Settings for enable_self_validation
-     ruddersettings:
+     rudder_settings:
        rudder_url: "https://localhost/rudder"
        name: "enable_self_validation"
        value: "false"
